IDEA-228553 - added negative test on Paths.get
GitOrigin-RevId: 9062c575d25649c9d3a271c2387227e7e578d0a0